# agentcollect

./: 2.html  CLAUDE.md  about.html  agentcollect-brian.html  ai-collection.html  api.html  apply-scroll-indicator.js  apply-scroll-indicator.py  asurint.html  attorney-collection.html  audit-1800accountant.html  audit-arrow-exterminators.html  audit-buildertrend-timeline.html  audit-buildertrend-v2.html  audit-buildertrend-v3.html  audit-buildertrend-v4-cursor.html  audit-buildertrend-v4-linear.html  audit-buildertrend-v4-product.html  audit-buildertrend-v4-stripe.html  audit-buildertrend-v5.html  audit-buildertrend-v6.html  audit-buildertrend-v7-dream.html  audit-buildertrend.html  audit-cgm.html  audit-cintas.html  audit-elwood.html  audit-fedex.html  audit-first-supply.html  audit-genomind.html  audit-github.html  audit-housecallpro-timeline.html  audit-housecallpro-v7.html  audit-housecallpro.html  audit-iws-dashboard.html  audit-iws-hook.html  audit-iws-new.html  audit-iws-pdf.html  audit-iws-v-a.html  audit-iws-v-b.html  audit-iws-v-c.html  (+147 more)
audit-cli/: .env.example  .gitignore  Makefile  README.md  findings-2026-04-08.md  pyproject.toml
audit-cli/src/agentcollect_audit/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
audit-cli/src/agentcollect_audit/data/: benchmarks.json  personas.json
audit-cli/src/agentcollect_audit/modules/: __init__.py  hack.py  (+7 more)
audit-cli/tests/: test_benchmark.py  test_draft_email.py  test_generate.py  test_hack.py  test_icp_score.py  test_pipeline.py  test_research.py  test_scrape.py
audit-cli/tests/fixtures/: ooma_call.json
(+341 files in other folders)
